appId: dev.expo.Payments
jsEngine: graaljs
---
# Run once to approve the first time deep linking prompt on iOS.
# This runs before all tests (only on iOS)
# Once accepted, the dialog is permanently dismissed for the simulator.
- openLink: bareexpo://apis
- extendedWaitUntil:
    visible: Open
    timeout: 10000
- tapOn:
    text: Open
    optional: true
# for good measure
- stopApp: dev.expo.Payments
- openLink: bareexpo://apis
- tapOn:
    text: Open
    optional: true
