appId: dev.expo.Payments
jsEngine: graaljs
---
# when devving, start from different screen so state is reset
#- openLink: bareexpo://components
- openLink: bareexpo://components/video/events
- tapOn:
    text: 'Open'
    optional: true

- assertVisible: 'source = Big Buck Bunny'
- assertVisible: 'isPlaying = false'
- assertVisible: 'isAtStart = true'
- assertVisible: 'duration = 596'
- assertVisible: 'currentTime = 0'
- assertVisible: 'mimeType = video/avc'
- assertVisible: 'isSupported = true'
- assertVisible: 'bitratePositive = true'
- assertVisible: 'volume = 1'
- assertVisible: 'status = readyToPlay'
- assertVisible: 'playbackRate = 1'
- assertVisible: 'error = false'

- tapOn: Play

- assertVisible: 'isPlaying = true'
- assertVisible: 'isAtStart = false'

- tapOn: Pause
- tapOn: Seek to 30s
- assertVisible: 'currentTime = 30'
- runFlow:
    file: ../_nested-flows/viewshot-comparison.yaml
    env:
      screenshotOutputPath: 'expo-video'
      testID: 'video-view'
      mode: 'keep-originals'

- tapOn: Trigger an Error

- assertVisible: 'source = No title'
- assertVisible: 'isPlaying = false'

- assertVisible: 'status = error'
- assertVisible: 'error = true'
