# TODO: Add this test to pipeline 
appId: host.exp.Exponent
name: Link preview
---
- stopApp: host.exp.Exponent
- longPressOn: 'Link.Preview: /one'
- assertVisible:
    text: 'Current Path: /one'
- assertVisible:
    text: 'Is preview: Yes'
- tapOn:
    point: '50%,10%'
- longPressOn: 'Link.Preview: /one'
- tapOn:
    point: '50%, 50%'
- assertVisible:
    text: 'Home - One'
- assertVisible:
    text: 'Is preview: No'
