appId: 'com.expo.routere2e' # iOS
#appId: 'dev.expo.routere2e' # Android
---
- launchApp
- assertVisible: ^Index$
- tapOn: Open Modal A
- assertVisible: ^Modal A$
- swipe:
    direction: DOWN
    duration: 100

- tapOn: Open Modal B
- assertVisible: ^Modal B$
- swipe:
    direction: DOWN
    duration: 100

- tapOn: Open Modal C
- assertVisible: ^Modal C - formSheet$
- swipe:
    direction: DOWN
    duration: 100

- tapOn: Open Modal D
- assertVisible: ^Modal D$
# Can't swipe-to-close with overFullScreen modals
- tapOn: Close (unmount) Modal D

- tapOn: Open fitToContents
- assertVisible: Add
- assertVisible: Remove
- swipe:
    direction: DOWN
    duration: 100

- assertVisible: ^Index$
