appId: 'com.expo.routere2e' # iOS
#appId: 'dev.expo.routere2e' # Android
---
- launchApp
- assertVisible: ^Index$

- tapOn: Open Modal C
- assertVisible: ^Modal C - formSheet$
- tapOn: Open Modal A
- assertVisible: ^Modal A$
- tapOn: Open Modal B
- assertVisible: ^Modal B$
- tapOn: Open Modal D
- assertVisible: ^Modal D$
- tapOn: Close (unmount) Modal C
- assertVisible: ^Index$

- tapOn: Open Modal D
- assertVisible: ^Modal D$
- tapOn: Open Modal B
- assertVisible: ^Modal B$
- tapOn: Open Modal C
- assertVisible: ^Modal C - formSheet$
- tapOn: Close (unmount) Modal D
- assertVisible: ^Index$
